fix: message answer

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ;
+    server_name 172.232.44.175; 
 
     location / {
         proxy_pass http://bot:8000;
