--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ aiosqlite==0.19.0
 annotated-types==0.6.0
 async-timeout==4.0.3
 attrs==23.2.0
+beautifulsoup4==4.12.2
 certifi==2023.11.17
+charset-normalizer==3.3.2
 frozenlist==1.4.1
+googlesearch-python==1.2.3
 greenlet==3.0.3
 idna==3.6
 loguru==0.7.2
@@ -15,7 +18,9 @@ magic-filter==1.0.12
 multidict==6.0.4
 pydantic==2.5.3
 pydantic_core==2.14.6
-PyMySQL==1.1.0
+requests==2.31.0
+soupsieve==2.5
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
+urllib3==2.1.0
 yarl==1.9.4
