--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ magic-filter==1.0.12
 multidict==6.0.4
 pydantic==2.5.3
 pydantic_core==2.14.6
+python-dotenv==1.0.0
 requests==2.31.0
 soupsieve==2.5
 SQLAlchemy==2.0.25
